Fix more jdk8 errors